# ssnap_dashboard

./: .gitignore  README.md  pyproject.toml
data/: data.csv
data/processed/: Abingdon Community Hospital.csv  Addenbrooke's Hospital.csv  Airedale General Hospital.csv  Alexandra Court.csv  Altnagelvin Hospital.csv  Antrim Area Hospital.csv  Arrowe Park Hospital.csv  BCUHB-Centre Stroke Rehab at LLGH.csv  Barnet General Hospital.csv  Barnsley Hospital.csv  Basildon University Hospital.csv  Basingstoke and North Hampshire Hospital.csv  Bassetlaw District General Hospital.csv  Bayman Ward-Brentwood Community Hospital.csv  Bedford Hospital.csv  Beech Hill Rehabilitation Unit.csv  Belfast City Hospital.csv  Bexhill Hospital - Irvine Unit.csv  Bideford Community Hospital.csv  Birmingham Heartlands Hospital.csv  Bishop Auckland Hospital.csv  Blackpool Victoria Hospital.csv  Bournemouth and Poole HASU.csv  Bradford Royal Infirmary.csv  Bradford and Airedale SU.csv  Brentwood Community Hospital.csv  Bristol Royal Infirmary.csv  Bristol and Weston SU.csv  Bronglais Hospital.csv  Broomfield Hospital.csv  Calderdale Royal Hospital.csv  Causeway Hospital.csv  Charing Cross Hospital HASU.csv  Charing Cross Hospital SU - Nine South Ward.csv  Charing Cross Hospital SU.csv  Charing Cross Neuro-rehabilitation Unit.csv  Chase Farm Hospital Inpatient Rehab Team.csv  Chelsea and Westminster Hospital.csv  Cheltenham General Hospital.csv  Chesterfield Royal.csv  (+268 more)
data/raw/: AprJun2014.csv  AprJun2015.csv  AprJun2018.csv  AprJun2019.csv  AprJun2021.csv  AprJun2022.csv  AprJun2023.csv  (+25 more)
(+485 files in other folders)
