[tool.poetry]
name = "stroke-dashboard"
version = "0.1.0"
description = "A dashboard for SSNAP stoke data."
authors = ["Samuel Ball <stmball@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
streamlit = "^1.40.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
